--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,32 @@
 version: 2.1
 orbs:
   react: thefrontside/react@0.2.0
+  node: circleci/node@5.0.2
+jobs:
+  build-and-test:
+    docker:
+      - image: "cimg/base:stable"
+    steps:
+      - checkout
+      - node/install:
+          node-version: "12.22"
+      - node/install-packages
+      - run:
+          command: npm run test
 workflows:
-  push:
+  build-and-test:
     jobs:
-      - react/install
-      - react/eslint:
-          requires:
-            - react/install
-      - react/test:
-          requires:
-            - react/install
-      - react/coverage:
-          requires:
-            - react/install
+      - build-and-test
+# workflows:
+#   push:
+#     jobs:
+#       - react/install
+#       - react/eslint:
+#           requires:
+#             - react/install
+#       - react/test:
+#           requires:
+#             - react/install
+#       - react/coverage:
+#           requires:
+#             - react/install
