--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           node-version: "12.22"
       - node/install-packages
       - run:
-          command: npm run test
+          command: npm run test --coverage
 workflows:
   build-and-test:
     jobs:
