--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,5 @@
 version: 2.1
 orbs:
-  react: thefrontside/react@0.2.0
   node: circleci/node@5.0.2
 jobs:
   build-and-test:
@@ -8,11 +7,18 @@ jobs:
       - image: "cimg/base:stable"
     steps:
       - checkout
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
       - node/install:
           node-version: "12.22"
       - node/install-packages
+      - save_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+          paths:
+            - ./node_modules
       - run:
-          command: npm run test --coverage
+          command: npm run test -- --coverage
+
 workflows:
   build-and-test:
     jobs:
