--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,35 @@
 version: 2.1
-orbs:
-  node: circleci/node@5.0.2
-  codecov: codecov/codecov@3.2.3
 jobs:
-  build-and-test:
+  build:
     docker:
-      - image: "cimg/base:stable"
-    resource_class: small
+      - image: cimg/node:16.13.2
     steps:
       - checkout
+      - run:
+          name: Update NPM
+          command: "sudo npm install -g npm"
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
-      - node/install:
-          node-version: "12.22"
-      - node/install-packages
+      - run:
+          name: Install Dependencies
+          command: npm install
       - save_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
       - run:
-          command: npm run test -- --coverage
-
+          name: Build React App
+          command: npm run build
+      - save_cache:
+          key: app-build-cache-{{ .Branch }}
+          paths:
+            - ./build
 workflows:
-  build-and-test:
+  version: 2
+  build-deploy:
     jobs:
-      - build-and-test
-  upload-to-codecov:
-    jobs:
-      - checkout
-      - codecov/upload
+      - build:
+          # filters:
+          #   branches:
+          #     only:
+          #       - main
