--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      - build:
+      - build
           # filters:
           #   branches:
           #     only:
