--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,16 @@
 version: 2.1
 jobs:
+  test:
+    docker:
+      - image: cimg/node:16.13.2
+    steps:
+      - checkout
+      - run:
+          name: Run Test Cases
+          command: npm test
+      - run:
+          name: Run Test Coverage
+          command: npm test -- --coverage
   build:
     docker:
       - image: cimg/node:16.13.2
@@ -32,9 +43,10 @@ jobs:
             - ./build
 workflows:
   version: 2
-  build-deploy:
+  build-test:
     jobs:
       - build
+      - test
         # filters:
         #   branches:
         #     only:
