--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,10 @@ jobs:
       - checkout
       - run:
           name: Run Test Cases
-          command: npm test
+          command: npm run test
       - run:
           name: Run Test Coverage
-          command: npm test -- --coverage
+          command: npm run test -- --coverage
   build:
     docker:
       - image: cimg/node:16.13.2
