--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
       - run:
           name: Run Test Cases
           command: npm run test
+      - store_test_results:
+          path: /tmp/test-results
       - run:
           name: Run Test Coverage
           command: npm run test -- --coverage
