--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,22 @@
 version: 2.1
 jobs:
-  test:
-    docker:
-      - image: cimg/node:16.13.2
-    steps:
-      - checkout
-      - run:
-          name: Install Dependencies
-          command: npm install
-      - run:
-          name: Run Test Cases
-          command: npm run test
-      - store_test_results:
-          path: /tmp/test-results
-      - run:
-          name: Run Test Coverage
-          command: npm run test -- --coverage
-  build:
+  # test:
+  #   docker:
+  #     - image: cimg/node:16.13.2
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Install Dependencies
+  #         command: npm install
+  #     - run:
+  #         name: Run Test Cases
+  #         command: npm run test
+  #     - store_test_results:
+  #         path: /tmp/test-results
+  #     - run:
+  #         name: Run Test Coverage
+  #         command: npm run test -- --coverage
+  build_test:
     docker:
       - image: cimg/node:16.13.2
     steps:
@@ -36,6 +36,8 @@ jobs:
       - run:
           name: Run Test Cases
           command: npm test
+      - store_test_results:
+          path: /tmp/test-results
       - run:
           name: Run Test Coverage
           command: npm test -- --coverage
@@ -50,8 +52,8 @@ workflows:
   version: 2
   build-test:
     jobs:
-      - build
-      - test
+      - build_test
+
         # filters:
         #   branches:
         #     only:
