--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
     "eslint-plugin-jest": "^27.0.1",
+    "jest-junit": "^14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -31,17 +32,17 @@
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 100,
-        "functions": 100,
-        "lines": 100,
-        "statements": 100
+        "branches": 5,
+        "functions": 5,
+        "lines": 5,
+        "statements": 5
       }
     },
     "coverageReporters": [
       "lcov",
       "text-summary",
       "text",
-      "html"
+      "html","jest-junit"
     ]
   },
   "browserslist": {
@@ -61,5 +62,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "jest": "^27.5.1"
+  },
+  "jest-junit":{
+    "output": "./test-results/junit/results.xml"
   }
 }
