--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,64 +1,17 @@
-version: 2.1
+version: "2.1"
+orbs:
+  node: circleci/node@5.0.2
 jobs:
-  # test:
-  #   docker:
-  #     - image: cimg/node:16.13.2
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Install Dependencies
-  #         command: npm install
-  #     - run:
-  #         name: Run Test Cases
-  #         command: npm run test
-  #     - store_test_results:
-  #         path: /tmp/test-results
-  #     - run:
-  #         name: Run Test Coverage
-  #         command: npm run test -- --coverage
-  build_test:
-    docker:
-      - image: cimg/node:16.13.2
+  test:
+    executor: node/default
     steps:
       - checkout
-      - run:
-          name: Update NPM
-          command: "sudo npm install -g npm"
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install Dependencies
-          command: npm install
-      - save_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
-          paths:
-            - ./node_modules
-      - run:
-          name: Run Test Cases
-          command: |
-            mkdir -p ./test-results/junit
-            npm test --ci --reporters=jest-junit
-      - store_artifacts:
-          path: ./test-results/junit
-      - store_test_results:
-          path: ./test-results
-      - run:
-          name: Run Test Coverage
-          command: npm test -- --coverage
-      - run:
-          name: Build React App
-          command: npm run build
-      - save_cache:
-          key: app-build-cache-{{ .Branch }}
-          paths:
-            - ./build
+      - node/install-packages:
+          cache-path: ~/project/node_modules
+          override-ci-command: npm install
+      - run: sudo npm install -g npm@latest
+      - run: npm run test
 workflows:
-  version: 2
-  build-test:
+  test_my_app:
     jobs:
-      - build_test
-
-        # filters:
-        #   branches:
-        #     only:
-        #       - main
+      - test
