--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
     steps:
       - checkout
       - node/install-packages:
-          cache-path: ~/project/node_modules
+          cache-path: ~/project/client/node_modules
+          app-dir: "/home/circleci/project/client"
           override-ci-command: npm install
       - run: sudo npm install -g npm@latest
       - run: npm run test
