updated circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
           override-ci-command: npm install
       - run: sudo npm install -g npm@latest
       - run: npm run test
+          app-dir: "/home/circleci/project/client"
 workflows:
   test_my_app:
     jobs:
