updated circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,9 @@ jobs:
       - checkout
       - node/install-packages:
           # cache-path: ~/project/client/node_modules
-          app-dir: "/home/circleci/project/server"
+          app-dir: "/home/circleci/project/client"
           override-ci-command: npm install
+      - run: npm test
 workflows:
   test_my_app:
     jobs:
