--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,10 @@ jobs:
           # cache-path: ~/project/client/node_modules
           app-dir: "/home/circleci/project/client"
           override-ci-command: npm install
-      - run: npm test
+      - run:
+          command: |
+            npm test
+          name: Test
 workflows:
   test_my_app:
     jobs:
