--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ orbs:
 jobs:
   test:
     executor: node/default
+    working_directory: /home/circleci/project/client
     steps:
       - checkout
       - node/install-packages:
