updated circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     working_directory: /home/circleci/project/client/
     steps:
       - checkout
-          app-dir: "/home/circleci/project/client"
+          path: "/home/circleci/project/client"
       - node/install-packages:
           # cache-path: ~/project/client/node_modules
           # app-dir: "/home/circleci/project/client"
