updated circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,10 @@ orbs:
 jobs:
   test:
     executor: node/default
-    working_directory: /home/circleci/project/client/
+    working_directory: /home/circleci/project/client
     steps:
       - checkout
-          path: "/home/circleci/project/client"
+          path: "/home/circleci/project"
       - node/install-packages:
           # cache-path: ~/project/client/node_modules
           # app-dir: "/home/circleci/project/client"
