updated circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 jobs:
   test:
     executor: node/default
-    working_directory: ~/project/client
+    # working_directory: ~/project/client
     steps:
       - checkout
 
