updated circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,12 @@ jobs:
           command: |
             npm test
           name: Test
+      - run:
+          path: ~/project/client
+          # app-dir: "/home/circleci/project/client"
+          command: |
+            npm test -- --coverage
+          name: Test
 workflows:
   test_my_app:
     jobs:
